tests/negative/wrong_arg_count2.sans
// expect-error: argument
add(a:I b:I) I = a + b
main() I { add(1) }
